// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Checkbox Basic 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    className="psds-checkbox"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <div
      className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
    >
      <input
        className="psds-screenreader-only psds-checkbox__input"
        name="colorRed"
        readOnly={true}
        type="checkbox"
        value="red"
      />
      <div
        className="psds-checkbox__square psds-checkbox__square.psds-theme--dark"
      />
    </div>
    <div
      className="psds-checkbox__label psds-theme--dark"
    >
      Red
    </div>
  </label>
</div>
`;

exports[`Storyshots Components/Checkbox Checked 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    className="psds-checkbox"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <div
      className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
    >
      <input
        checked={true}
        className="psds-screenreader-only psds-checkbox__input"
        name="colorRed"
        readOnly={true}
        type="checkbox"
        value="red"
      />
      <div
        className="psds-checkbox__square psds-checkbox__square.psds-theme--dark psds-checkbox__square--active"
      >
        <svg
          aria-label="Checkmark"
          className="psds-checkbox__icon"
          role="img"
          version="1.1"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polygon
            points="6.89667458 13 2.62114014 8.72446556 4.12826603 7.21733967 6.89667458 9.97505938 12.871734 4 14.3788599 5.51781473"
          />
        </svg>
      </div>
    </div>
    <div
      className="psds-checkbox__label psds-theme--dark"
    >
      Red
    </div>
  </label>
</div>
`;

exports[`Storyshots Components/Checkbox Checked Error 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    className="psds-checkbox"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <div
      className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--error psds-halo--visible-on-focus"
    >
      <input
        checked={true}
        className="psds-screenreader-only psds-checkbox__input"
        name="colorRed"
        readOnly={true}
        type="checkbox"
        value="red"
      />
      <div
        className="psds-checkbox__square psds-checkbox__square.psds-theme--dark psds-checkbox__square--active"
      >
        <svg
          aria-label="Checkmark"
          className="psds-checkbox__icon"
          role="img"
          version="1.1"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polygon
            points="6.89667458 13 2.62114014 8.72446556 4.12826603 7.21733967 6.89667458 9.97505938 12.871734 4 14.3788599 5.51781473"
          />
        </svg>
      </div>
    </div>
    <div
      className="psds-checkbox__label psds-theme--dark"
    >
      Red
    </div>
  </label>
</div>
`;

exports[`Storyshots Components/Checkbox Checked Indeterminate 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    className="psds-checkbox"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <div
      className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
    >
      <input
        checked={true}
        className="psds-screenreader-only psds-checkbox__input"
        name="colorRed"
        readOnly={true}
        type="checkbox"
        value="red"
      />
      <div
        className="psds-checkbox__square psds-checkbox__square.psds-theme--dark psds-checkbox__square--active"
      >
        <svg
          aria-label="Indeterminate Mark"
          className="psds-checkbox__icon"
          role="img"
          version="1.1"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="2"
            width="10"
            x="3"
            y="7"
          />
        </svg>
      </div>
    </div>
    <div
      className="psds-checkbox__label psds-theme--dark"
    >
      Red
    </div>
  </label>
</div>
`;

exports[`Storyshots Components/Checkbox Disabled 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    className="psds-checkbox psds-checkbox--disabled"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <div
      className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline"
    >
      <input
        className="psds-screenreader-only psds-checkbox__input"
        disabled={true}
        name="colorRed"
        readOnly={true}
        type="checkbox"
        value="red"
      />
      <div
        className="psds-checkbox__square psds-checkbox__square.psds-theme--dark"
      />
    </div>
    <div
      className="psds-checkbox__label psds-theme--dark"
    >
      Red
    </div>
  </label>
</div>
`;

exports[`Storyshots Components/Checkbox Error 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    className="psds-checkbox"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <div
      className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--error psds-halo--visible-on-focus"
    >
      <input
        className="psds-screenreader-only psds-checkbox__input"
        name="colorRed"
        readOnly={true}
        type="checkbox"
        value="red"
      />
      <div
        className="psds-checkbox__square psds-checkbox__square.psds-theme--dark"
      />
    </div>
    <div
      className="psds-checkbox__label psds-theme--dark"
    >
      Red
    </div>
  </label>
</div>
`;

exports[`Storyshots Components/Checkbox Example State Demo 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div>
    <div
      style={
        Object {
          "color": "rgba(255, 255, 255, 0.95)",
        }
      }
    >
      Checked: 
      
    </div>
    <label
      className="psds-checkbox"
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      <div
        className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
      >
        <input
          checked={false}
          className="psds-screenreader-only psds-checkbox__input"
          name="colorRed"
          readOnly={true}
          type="checkbox"
          value="red"
        />
        <div
          className="psds-checkbox__square psds-checkbox__square.psds-theme--dark"
        />
      </div>
      <div
        className="psds-checkbox__label psds-theme--dark"
      >
        Red
      </div>
    </label>
    <label
      className="psds-checkbox"
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      <div
        className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
      >
        <input
          checked={false}
          className="psds-screenreader-only psds-checkbox__input"
          name="colorGreen"
          readOnly={true}
          type="checkbox"
          value="green"
        />
        <div
          className="psds-checkbox__square psds-checkbox__square.psds-theme--dark"
        />
      </div>
      <div
        className="psds-checkbox__label psds-theme--dark"
      >
        Green
      </div>
    </label>
    <label
      className="psds-checkbox"
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      <div
        className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
      >
        <input
          checked={false}
          className="psds-screenreader-only psds-checkbox__input"
          name="colorBlue"
          readOnly={true}
          type="checkbox"
          value="blue"
        />
        <div
          className="psds-checkbox__square psds-checkbox__square.psds-theme--dark"
        />
      </div>
      <div
        className="psds-checkbox__label psds-theme--dark"
      >
        Blue
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots Components/Checkbox Indeterminate 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    className="psds-checkbox"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <div
      className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
    >
      <input
        className="psds-screenreader-only psds-checkbox__input"
        name="colorRed"
        readOnly={true}
        type="checkbox"
        value="red"
      />
      <div
        className="psds-checkbox__square psds-checkbox__square.psds-theme--dark psds-checkbox__square--active"
      >
        <svg
          aria-label="Indeterminate Mark"
          className="psds-checkbox__icon"
          role="img"
          version="1.1"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="2"
            width="10"
            x="3"
            y="7"
          />
        </svg>
      </div>
    </div>
    <div
      className="psds-checkbox__label psds-theme--dark"
    >
      Red
    </div>
  </label>
</div>
`;
